# vegas

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  FORMATS.md  README.md  WORKFLOW.md  example_config.json  generate_lattices.py  preflight_check.sh  pyproject.toml  requirements.txt  run_all_benchmarks.py  sanitizer_suppressions.txt  validate.sh
analyzers/: vegas-analyzer-heisenberg.py  vegas-analyzer-lite.py  vegas-analyzer-xyz.py
benchmarks/: PROGRESS_REPORT.md  VALIDATION_REPORT.md
benchmarks/configs/: b1_ising_chain.json  b2_ising_square.json  b3_ferromagnet_ground.json  b4a_ergodicity_up.json  b4b_ergodicity_down.json  b5_sigma_freeze.json  b6_heisenberg_highT.json  io_scaling_1.json  io_scaling_16_1.json  io_scaling_16_10.json  io_scaling_16_11.json  io_scaling_16_12.json  io_scaling_16_13.json  io_scaling_16_14.json  io_scaling_16_15.json  io_scaling_16_16.json  io_scaling_16_2.json  io_scaling_16_3.json  io_scaling_16_4.json  io_scaling_16_5.json  io_scaling_16_6.json  io_scaling_16_7.json  io_scaling_16_8.json  io_scaling_16_9.json  io_scaling_4_1.json  io_scaling_4_2.json  io_scaling_4_3.json  io_scaling_4_4.json  io_scaling_8_1.json  io_scaling_8_2.json  io_scaling_8_3.json  io_scaling_8_4.json  io_scaling_8_5.json  io_scaling_8_6.json  io_scaling_8_7.json  io_scaling_8_8.json  io_scaling_heisenberg_100.json  io_scaling_steady_1.json  io_scaling_steady_16.json  io_scaling_steady_4.json  (+3 more)
benchmarks/lattices/: all_spins_down.txt  all_spins_up.txt  ferromagnet_square_20x20.txt  ferromagnet_square_20x20_pbc.txt  heisenberg_chain_100.txt  ising_chain_100.txt  ising_small_5x5_pbc.txt  simple_10x10.txt
benchmarks/results/: b1_ising_chain.h5  b3_ferromagnet.h5  b4a_ergodicity_up.h5  b4b_ergodicity_down.h5  b5_sigma_freeze.h5
benchmarks/scripts/: extract_observable.py  generate_lattices.py  run_benchmark.sh
code/src/: reporter.cc
docs/: CHECKERBOARD_DESIGN.md
include/: aligned_allocator.h  atom.h  color_block.h  config_parser.h  error.h  exception.h  lattice.h  params.h  random.h  reporter.h  simd_rng.h  spin_model.h  spin_model_tags.h  starter.h  system.h  system_builder.h
src/: atom.cc  config_parser.cc  lattice.cc  main.cc  reporter.cc  spin_model.cc  starter.cc  system.cc  system_builder.cc
test_system/: anisotropy_terms.txt  array_config.json  chaos_test.json  chaos_test2.json  debug_ising.json  ferromagnetic_chain.txt  generate_square_3x3_pbc.py  generate_triangular_lattice.py  heisenberg_100_500k.json  initial_spins.txt  invalid_mcs_config.json  ising_400_500k.json  ising_perf.json  negative_temp_config.json  range_config.json  square_3x3_pbc.txt  test_avx2.json  test_config.json  triangular_3x3_pbc.txt  valid_config.json  verify_hdf5.py  zero_temp_config.json
tests/: test_basic.cc  test_coloring.cc  test_config_parser.cc  test_integration.cc  test_reporter.cc  test_simple.cc  test_system.cc  test_system_builder.cc
