[project]
name = "vegas-analyzers"
version = "1.1.0"
description = "Python analysis tools for VEGAS Monte Carlo simulations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "h5py>=3.10.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
# python = "3.11"  # This field is not supported in current uv version